--- a/index.html
+++ b/index.html
@@ -1,71 +1,58 @@
 <!doctype html>
 <html lang="nl">
-	
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="author" content="jouw naam">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-	<title>VIDii 2022/23 - Tijdlijn</title>
-	
+
+	<title>M&M's World</title>
+
 	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+	<link rel="icon" type="image/svg+xml" href="images/MMs-logo.png">
 </head>
 
 <body>
 	<header>
-		<h1>De titel van je tijdlijn</h1>
-		<p>Korte omschrijving van je tijdlijn</p>
+		<img src="images/MMs-logo.png" alt="M&M's logo">
 	</header>
 
 	<main>
-		<!-- de tijdlijn zelf is een ordered list -->
-
-		<!-- elk list-item is een punt in tijd -->
-		<!-- 11 list-items om te starten -->
-		<!-- bepaal zelf hoeveel je er nodig hebt -->
-		
-		<!-- in elk listitem staat nu een link -->
-		<!-- de link kun je vullen met jouw content -->
-		<!-- of in zijn geheel vervangen door jouw content -->
 		<ol>
 			<li>
-				<a href="#">eerste punt in tijd</a>
+				<p>1960</p>
+				<button></button>
 			</li>
 			<li>
-				<a href="#">tweede punt in tijd</a>
+				<p>1960</p>
+				<button></button>
 			</li>
 			<li>
-				<a href="#">derde punt in tijd</a>
+				<p>1976</p>
+				<button></button>
 			</li>
 			<li>
-				<a href="#">vierde punt in tijd</a>
+				<p>1995</p>
+				<button></button>
 			</li>
 			<li>
-				<a href="#">vijde punt in tijd</a>
+				<p>1997</p>
+				<button></button>
 			</li>
 			<li>
-				<a href="#">zesde punt in tijd</a>
+				<p>2012</p>
+				<button></button>
 			</li>
 			<li>
-				<a href="#">zevende punt in tijd</a>
+				<p>2022</p>
+				<button></button>
 			</li>
-			<li>
-				<a href="#">achste punt in tijd</a>
-			</li>
-			<li>
-				<a href="#">negende punt in tijd</a>
-			</li>
-			<li>
-				<a href="#">tiende punt in tijd</a>
-			</li>
-			<li>
-				<a href="#">elfde punt in tijd</a>
-			</li>
+
+			<li>bakj</li>
 		</ol>
 	</main>
 
 	<script src="scripts/script.js"></script>
 </body>
-	
+
 </html>
