--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<button></button>
 			</li>
 
-			<li>bakj</li>
+			<li><img src="images/MMs-zak.svg" alt="m en m zakje"></li>
 		</ol>
 	</main>
 
