--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 			<li>
 				<p>1960</p>
 				<button></button>
+				<!-- <div></div>
+				<img src="images/MMs-vallen.svg" alt=""> -->
 			</li>
 			<li>
 				<p>1960</p>
@@ -48,7 +50,9 @@
 				<button></button>
 			</li>
 
-			<li><img src="images/MMs-zak.svg" alt="m en m zakje"></li>
+			<li>
+				<img src="images/MMs-zak.svg" alt="m en m zakje">
+			</li>
 		</ol>
 	</main>
 
