--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 	<title>M&M's World</title>
 
 	<link href="styles/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/MMs-logo.png">
+	<link rel="icon" type="image/svg+xml" href="images/MMs-cursor-blauw.png">
 </head>
 
 <body>
 	<header>
-		<img src="images/MMs-logo.png" alt="M&M's logo">
+		<img src="images/MMs-logo.png" alt="m en ms logo">
 	</header>
 
 	<main>
@@ -22,36 +22,48 @@
 			<li>
 				<p>1960</p>
 				<button></button>
-				<!-- <div></div>
-				<img src="images/MMs-vallen.svg" alt=""> -->
+				<div></div>
+				<img src="images/MMs-vallen.svg" alt="vallende m en ms rood">
 			</li>
 			<li>
 				<p>1960</p>
 				<button></button>
+				<div></div>
+				<img src="images/MMs-vallen.svg" alt="vallende m en ms geel">
 			</li>
 			<li>
 				<p>1976</p>
 				<button></button>
+				<div></div>
+				<img src="images/MMs-vallen.svg" alt="vallende m en ms oranje">
 			</li>
 			<li>
 				<p>1995</p>
 				<button></button>
+				<div></div>
+				<img src="images/MMs-vallen.svg" alt="vallende m en ms blauw">
 			</li>
 			<li>
 				<p>1997</p>
 				<button></button>
+				<div></div>
+				<img src="images/MMs-vallen.svg" alt="vallende m en ms groen">
 			</li>
 			<li>
 				<p>2012</p>
 				<button></button>
+				<div></div>
+				<img src="images/MMs-vallen.svg" alt="vallende m en ms bruin">
 			</li>
 			<li>
 				<p>2022</p>
 				<button></button>
+				<div></div>
+				<img src="images/MMs-vallen.svg" alt="vallende m en ms paars">
 			</li>
 
 			<li>
-				<img src="images/MMs-zak.svg" alt="m en m zakje">
+				<img src="images/MMs-zak.svg" alt="m en ms zakje">
 			</li>
 		</ol>
 	</main>
