--- a/index.html
+++ b/index.html
@@ -23,43 +23,43 @@
 				<p>1960</p>
 				<button></button>
 				<div></div>
-				<img src="images/MMs-vallen.svg" alt="vallende m en ms rood">
+				<img src="images/MMs-vallen-rood.svg" alt="vallende m en ms rood">
 			</li>
 			<li>
 				<p>1960</p>
 				<button></button>
 				<div></div>
-				<img src="images/MMs-vallen.svg" alt="vallende m en ms geel">
+				<img src="images/MMs-vallen-geel.svg" alt="vallende m en ms geel">
 			</li>
 			<li>
 				<p>1976</p>
 				<button></button>
 				<div></div>
-				<img src="images/MMs-vallen.svg" alt="vallende m en ms oranje">
+				<img src="images/MMs-vallen-oranje.svg" alt="vallende m en ms oranje">
 			</li>
 			<li>
 				<p>1995</p>
 				<button></button>
 				<div></div>
-				<img src="images/MMs-vallen.svg" alt="vallende m en ms blauw">
+				<img src="images/MMs-vallen-blauw.svg" alt="vallende m en ms blauw">
 			</li>
 			<li>
 				<p>1997</p>
 				<button></button>
 				<div></div>
-				<img src="images/MMs-vallen.svg" alt="vallende m en ms groen">
+				<img src="images/MMs-vallen-groen.svg" alt="vallende m en ms groen">
 			</li>
 			<li>
 				<p>2012</p>
 				<button></button>
 				<div></div>
-				<img src="images/MMs-vallen.svg" alt="vallende m en ms bruin">
+				<img src="images/MMs-vallen-bruin.svg" alt="vallende m en ms bruin">
 			</li>
 			<li>
 				<p>2022</p>
 				<button></button>
 				<div></div>
-				<img src="images/MMs-vallen.svg" alt="vallende m en ms paars">
+				<img src="images/MMs-vallen-paars.svg" alt="vallende m en ms paars">
 			</li>
 
 			<li>
