--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<title>M&M's World</title>
-
+ 
 	<link href="styles/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/MMs-cursor-blauw.png">
 </head>
@@ -15,52 +15,120 @@
 <body>
 	<header>
 		<img src="images/MMs-logo.png" alt="m en ms logo">
+		<!-- <button>Darkmode</button> -->
 	</header>
 
 	<main>
 		<ol>
 			<li>
 				<p>1960</p>
-				<button></button>
+				<button class="buis"></button>
 				<div></div>
 				<img src="images/MMs-vallen-rood.svg" alt="vallende m en ms rood">
+
+				<dialog>
+					<form method="dialog">
+						<button type="submit" aria-label="sluit red">X</button>
+						<iframe src="https://www.youtube.com/embed/ptYMdSdZBCI" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
+				<dialog>		
 			</li>
+
+
+
+
 			<li>
 				<p>1960</p>
-				<button></button>
+				<button class="buis" ></button>
 				<div></div>
 				<img src="images/MMs-vallen-geel.svg" alt="vallende m en ms geel">
+
+				<dialog>
+					<form method="dialog">
+						<button type="submit" aria-label="sluit red">X</button>
+						<iframe src="https://www.youtube.com/embed/ir1gG3npkWc" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
+				<dialog>
 			</li>
+
+
+
+
 			<li>
 				<p>1976</p>
-				<button></button>
+				<button class="buis" ></button>
 				<div></div>
 				<img src="images/MMs-vallen-oranje.svg" alt="vallende m en ms oranje">
+
+				<dialog>
+					<form method="dialog">
+						<button type="submit" aria-label="sluit red">X</button>
+						<iframe src="https://www.youtube.com/embed/UdHd55EDHpE" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
+				<dialog>
 			</li>
+
+
+
+
 			<li>
 				<p>1995</p>
-				<button></button>
+				<button class="buis"></button>
 				<div></div>
 				<img src="images/MMs-vallen-blauw.svg" alt="vallende m en ms blauw">
+
+				<dialog>
+					<form method="dialog">
+						<button type="submit" aria-label="sluit red">X</button>
+						<iframe src="https://www.youtube.com/embed/CQjFf_G7nDw" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
+				<dialog>
 			</li>
+
+
+
+
 			<li>
 				<p>1997</p>
-				<button></button>
+				<button class="buis" ></button>
 				<div></div>
 				<img src="images/MMs-vallen-groen.svg" alt="vallende m en ms groen">
+
+				<dialog>
+					<form method="dialog">
+						<button type="submit" aria-label="sluit red">X</button>
+						<iframe src="https://www.youtube.com/embed/947HaRC4Z5o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
+				<dialog>
 			</li>
+
+
+
+
 			<li>
 				<p>2012</p>
-				<button></button>
+				<button class="buis" ></button>
 				<div></div>
 				<img src="images/MMs-vallen-bruin.svg" alt="vallende m en ms bruin">
+
+				<dialog>
+					<form method="dialog">
+						<button type="submit" aria-label="sluit red">X</button>
+						<iframe src="https://www.youtube.com/embed/Azs1lbG2eOU" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
+				<dialog>
 			</li>
+
+
+
+
 			<li>
 				<p>2022</p>
-				<button></button>
+				<button class="buis" ></button>
 				<div></div>
 				<img src="images/MMs-vallen-paars.svg" alt="vallende m en ms paars">
+
+				<dialog>
+					<form method="dialog">
+						<button type="submit" aria-label="sluit red">X</button>
+						<iframe src="https://www.youtube.com/embed/E_B4Oz4CPu0" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
+				<dialog>
 			</li>
+
 
 			<li>
 				<img src="images/MMs-zak.svg" alt="m en ms zakje">
