--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 <body>
 	<header>
 		<img src="images/MMs-logo.png" alt="m en ms logo">
-		<!-- <button>Darkmode</button> -->
 	</header>
 
 	<main>
@@ -44,7 +43,7 @@
 
 				<dialog>
 					<form method="dialog">
-						<button type="submit" aria-label="sluit red">X</button>
+						<button type="submit" aria-label="sluit yellow">X</button>
 						<iframe src="https://www.youtube.com/embed/ir1gG3npkWc" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
 				<dialog>
 			</li>
@@ -60,7 +59,7 @@
 
 				<dialog>
 					<form method="dialog">
-						<button type="submit" aria-label="sluit red">X</button>
+						<button type="submit" aria-label="sluit oranje">X</button>
 						<iframe src="https://www.youtube.com/embed/UdHd55EDHpE" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
 				<dialog>
 			</li>
@@ -76,7 +75,7 @@
 
 				<dialog>
 					<form method="dialog">
-						<button type="submit" aria-label="sluit red">X</button>
+						<button type="submit" aria-label="sluit blauw">X</button>
 						<iframe src="https://www.youtube.com/embed/CQjFf_G7nDw" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
 				<dialog>
 			</li>
@@ -92,7 +91,7 @@
 
 				<dialog>
 					<form method="dialog">
-						<button type="submit" aria-label="sluit red">X</button>
+						<button type="submit" aria-label="sluit groen">X</button>
 						<iframe src="https://www.youtube.com/embed/947HaRC4Z5o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
 				<dialog>
 			</li>
@@ -108,7 +107,7 @@
 
 				<dialog>
 					<form method="dialog">
-						<button type="submit" aria-label="sluit red">X</button>
+						<button type="submit" aria-label="sluit bruin">X</button>
 						<iframe src="https://www.youtube.com/embed/Azs1lbG2eOU" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
 				<dialog>
 			</li>
@@ -124,7 +123,7 @@
 
 				<dialog>
 					<form method="dialog">
-						<button type="submit" aria-label="sluit red">X</button>
+						<button type="submit" aria-label="sluit paars">X</button>
 						<iframe src="https://www.youtube.com/embed/E_B4Oz4CPu0" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
 				<dialog>
 			</li>
