--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 				<dialog>
 					<form method="dialog">
-						<button type="submit" aria-label="sluit yellow">X</button>
+						<button type="submit" aria-label="sluit red">X</button>
 						<iframe src="https://www.youtube.com/embed/ir1gG3npkWc" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
 				<dialog>
 			</li>
@@ -59,7 +59,7 @@
 
 				<dialog>
 					<form method="dialog">
-						<button type="submit" aria-label="sluit oranje">X</button>
+						<button type="submit" aria-label="sluit red">X</button>
 						<iframe src="https://www.youtube.com/embed/UdHd55EDHpE" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
 				<dialog>
 			</li>
@@ -75,7 +75,7 @@
 
 				<dialog>
 					<form method="dialog">
-						<button type="submit" aria-label="sluit blauw">X</button>
+						<button type="submit" aria-label="sluit red">X</button>
 						<iframe src="https://www.youtube.com/embed/CQjFf_G7nDw" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
 				<dialog>
 			</li>
@@ -91,7 +91,7 @@
 
 				<dialog>
 					<form method="dialog">
-						<button type="submit" aria-label="sluit groen">X</button>
+						<button type="submit" aria-label="sluit red">X</button>
 						<iframe src="https://www.youtube.com/embed/947HaRC4Z5o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
 				<dialog>
 			</li>
@@ -107,7 +107,7 @@
 
 				<dialog>
 					<form method="dialog">
-						<button type="submit" aria-label="sluit bruin">X</button>
+						<button type="submit" aria-label="sluit red">X</button>
 						<iframe src="https://www.youtube.com/embed/Azs1lbG2eOU" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
 				<dialog>
 			</li>
@@ -123,7 +123,7 @@
 
 				<dialog>
 					<form method="dialog">
-						<button type="submit" aria-label="sluit paars">X</button>
+						<button type="submit" aria-label="sluit red">X</button>
 						<iframe src="https://www.youtube.com/embed/E_B4Oz4CPu0" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture;" allowfullscreen></iframe>
 				<dialog>
 			</li>
